--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 .navbar-brand{
-  font-size: 55px;
+  font-size: 35px;
   font-family: 'DM Serif Display', serif;
   width: 225;
   height:75;
-  text-decoration:line-through;
+  text-decoration:underline;
   
 }
 .logo{
