--- a/port.css
+++ b/port.css
@@ -4,11 +4,11 @@ body{
 }
 
 .navbar-brand{
-  font-size: 55px;
+  font-size: 35px;
   font-family: 'DM Serif Display', serif;
   width: 225;
   height:75;
-  text-decoration:line-through;
+  text-decoration:underline;
   
 }
 
