--- a/contact.css
+++ b/contact.css
@@ -3,13 +3,13 @@
 }
 
 .navbar-brand{
-    font-size: 55px;
-    font-family: 'DM Serif Display', serif;
-    width: 225;
-    height:75;
-    text-decoration:line-through;
-    
-  }
+  font-size: 35px;
+  font-family: 'DM Serif Display', serif;
+  width: 225;
+  height:75;
+  text-decoration:underline;
+  
+}
 
 .animate__fadeIn {
     animation-name: fadeIn;
