--- a/about.css
+++ b/about.css
@@ -4,13 +4,13 @@ body{
 }
 
 .navbar-brand{
-    font-size: 55px;
-    font-family: 'DM Serif Display', serif;
-    width: 225;
-    height:75;
-    text-decoration:line-through;
-    
-  }
+  font-size: 35px;
+  font-family: 'DM Serif Display', serif;
+  width: 225;
+  height:75;
+  text-decoration:underline;
+  
+}
 
 
 .erect{
